--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <h1 align=center>Single-image barndoor button generator</h1>
-<p>Click this image to use it as a sample: <img src="/barndoorbuttonizer/cloud.png" class="cloud" /> . See if you can get the red, green, and blue lines to repeat!</p>
+<p>Click this image to use it as a sample: <img src="$@$rootPathReplaceString$@$cloud.png" class="cloud" /> . See if you can get the red, green, and blue lines to repeat!</p>
 <DIV id="barndoorbuttonizerStatus">Or drag an image from you hard drive to the area below ...</DIV>
 <DIV id="barndoorbuttonizerDrop">Drop files here.</DIV>
 <DIV id="barndoorbuttonizerList"></DIV>
